fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,5 @@ body {
 
 .blogList {
 	list-style: none;
+	margin-left: -20px
 }
